--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@createjs/easeljs": "^2.0.0-beta.4",
     "@next/font": "^14.2.15",
     "@react-three/drei": "^9.114.5",
     "next": "14.2.15",
