--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^14.2.15",
     "@react-three/drei": "^9.114.5",
     "next": "14.2.15",
+    "pixi.js": "^8.5.2",
     "react": "^18",
     "react-dom": "^18",
     "split-type": "^0.3.4"
