--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pixi.js": "^8.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
